[gd_scene load_steps=36 format=2]

[ext_resource path="res://src/player_v3/player_controller.gd" type="Script" id=1]
[ext_resource path="res://src/player_v3/states/combat/stagger.gd" type="Script" id=2]
[ext_resource path="res://src/player_v3/player_state_machine.gd" type="Script" id=3]
[ext_resource path="res://src/player_v3/states/die.gd" type="Script" id=4]
[ext_resource path="res://src/player_v3/states/motion/in_air/fall.gd" type="Script" id=5]
[ext_resource path="res://src/player_v3/states/motion/on_ground/move.gd" type="Script" id=6]
[ext_resource path="res://src/player_v3/states/motion/in_air/jump.gd" type="Script" id=7]
[ext_resource path="res://src/player_v3/states/motion/on_ground/idle.gd" type="Script" id=8]
[ext_resource path="res://assets/images/adventurer.png" type="Texture" id=9]
[ext_resource path="res://assets/images/adventurer_n.png" type="Texture" id=10]
[ext_resource path="res://src/player_v3/states/combat/attack.gd" type="Script" id=11]
[ext_resource path="res://src/player_v3/health/Health.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Sensors/FloorSensor.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/player_v3/states/motion/in_air/tumble.gd" type="Script" id=14]
[ext_resource path="res://src/player_v3/states/combat/Cast.gd" type="Script" id=15]
[ext_resource path="res://src/player_v3/states/combat/Cast_Loop.gd" type="Script" id=16]
[ext_resource path="res://src/Sensors/WallSensor.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/player_v3/states/motion/in_air/wall_slide.gd" type="Script" id=18]
[ext_resource path="res://src/player_v3/states/motion/in_air/ledge_hang.gd" type="Script" id=19]
[ext_resource path="res://src/Sensors/DamageBox.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/Effects/Particles/BloodSplatter.tscn" type="PackedScene" id=21]

[sub_resource type="CapsuleShape2D" id=1]
height = 24.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 16 )

[sub_resource type="Animation" id=3]
length = 0.3
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 70, 73 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageBox/CollisionPolygon2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00460573, 0.100814, 0.200605 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.3
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 110, 115 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageBox/CollisionPolygon2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 0.3
loop = true
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0706492, 0.139739, 0.220332 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 114, 115, 116, 117 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageBox/CollisionPolygon2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 83, 89 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageBox/CollisionPolygon2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageBox/CollisionPolygon2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.19, 0.38, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageBox/CollisionPolygon2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 20, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageBox/CollisionPolygon2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 40, 44 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageBox/CollisionPolygon2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
length = 0.2
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.199746 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 80, 82 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0734489, 0.131111, 0.196666 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/DamageBox/CollisionPolygon2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageBox/CollisionPolygon2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageBox/CollisionPolygon2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 102, 103 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageBox/CollisionPolygon2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="PlayerV3" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 525312
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 418.0 ]
}
slope_force = 4
snap_point = Vector2( 0, 30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 9 )
normal_map = ExtResource( 10 )
vframes = 15
hframes = 10
frame = 1

[node name="FloorDetector" parent="Sprite" instance=ExtResource( 13 )]
visible = false
position = Vector2( 0, 27 )

[node name="WallSensor" parent="Sprite" instance=ExtResource( 17 )]
visible = false
position = Vector2( 0, 5 )

[node name="Hitbox" type="Area2D" parent="Sprite"]
visible = false
collision_layer = 0
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hitbox"]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="DamageBox" parent="Sprite" instance=ExtResource( 20 )]
collision_mask = 131072

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Sprite/DamageBox"]
polygon = PoolVector2Array( -21, 22, 6, -18, 18, -18, 27, -12, 33, -2, 33, 10, 29, 18, 22, 24, 14, 27, -2, 26 )
disabled = true

[node name="BloodSplatter" parent="Sprite" instance=ExtResource( 21 )]
position = Vector2( 2, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
method_call_mode = 1
anims/attack = SubResource( 3 )
anims/cast = SubResource( 4 )
anims/cast_loop = SubResource( 5 )
anims/die = SubResource( 6 )
anims/fall = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/jump = SubResource( 9 )
anims/ledge_hang = SubResource( 10 )
anims/stagger = SubResource( 11 )
anims/tumble = SubResource( 12 )
anims/walk = SubResource( 13 )
anims/wall_slide = SubResource( 14 )

[node name="Health" parent="." instance=ExtResource( 12 )]
max_health = 10

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Tumble" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Wall_Slide" type="Node" parent="StateMachine"]
script = ExtResource( 18 )

[node name="Ledge_Hang" type="Node" parent="StateMachine"]
script = ExtResource( 19 )

[node name="Stagger" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Cast" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Cast_Loop" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Spells" type="Node2D" parent="."]

[node name="Persistant" type="Node2D" parent="Spells"]

[node name="Projectile" type="Node2D" parent="Spells"]

[node name="SoundFX" type="Node2D" parent="."]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_AnimationPlayer_animation_finished"]
[connection signal="health_changed" from="Health" to="." method="_on_Health_health_changed"]
[connection signal="health_depleted" from="Health" to="StateMachine" method="_on_Health_health_depleted"]
[connection signal="state_changed" from="StateMachine" to="." method="_on_StateMachine_state_changed"]
